@@ -2,7 +2,7 @@ smp-utils (0.96-0.1) unstable; urgency=low
 
   * corrections for SAS-2
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 11 Mar 2011 13:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 14 Mar 2011 18:00:00 +0100
 
 smp-utils (0.95-0.1) unstable; urgency=low
 
